# nanoGPT

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
scripts/: bench.py  sample.py  train.py
src/nanogpt/: __init__.py  model.py  trainer.py
src/nanogpt/utils/: __init__.py  configurator.py  dataloader.py
tests/: test_config.py  test_dataloader.py  test_model.py  test_trainer.py
